fix: JWT auth filter, security config y emails con logo y URLs dinámicas